[ADD] adding new Logo as Sticker css and logos and facebook pixel code and favicon

--- a/addons/bird_config/static/src/css/bird.css
+++ b/addons/bird_config/static/src/css/bird.css
@@ -408,10 +408,11 @@ main .container img {
 }
 
 header a.navbar-brand img {
-    max-height: 90px !important;
+    max-height: 140px !important;
+    filter: drop-shadow(2px 3px 5px #000);
 }
 header a.navbar-brand img {
-    margin-top: 10px;
+    margin-top: 0px;
 }
     #popupbox .container.popup_box {
     background: transparent;
