--- a/addons/bird_config/views/templates.xml
+++ b/addons/bird_config/views/templates.xml
@@ -31,6 +31,29 @@
 <!--            <script type="text/javascript" src="/bird_config/static/src/js/textreplace.js"/>-->
         </xpath>
     </template>
+        <template id="facebook_pixel_code" inherit_id="website.layout" name="facebook pixel code">
+            <xpath expr="//head" position="inside">
+                <link rel="shortcut icon" type="image/png" href="/bird_config/static/src/img/BirdLife_Logo_Tab.png"/>
+                <!-- Facebook Pixel Code -->
+
+                <script>
+                    !function(f,b,e,v,n,t,s)
+                    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+                    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+                    n.queue=[];t=b.createElement(e);t.async=!0;
+                    t.src=v;s=b.getElementsByTagName(e)[0];
+                    s.parentNode.insertBefore(t,s)}(window, document,'script',
+                    'https://connect.facebook.net/en_US/fbevents.js');
+                    fbq('init', '683450955904605');
+                    fbq('track', 'PageView');
+                </script>
+                <noscript>
+                    <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=683450955904605&amp;ev=PageView&amp;noscript=1"/>
+                </noscript>
+
+                <!-- End Facebook Pixel Code -->
+            </xpath>
+        </template>
     <!-- Load custom  JS for the website -->
 <!--
     <template id="bird_assets_frontend" inherit_id="website_forum.assets_frontend" name="bird JS">
